IAC/Cloudformation/Infrastructure/Nested-Stacks/Initiate-Account/infra.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Creates vpc and subnets for apps and shared services     
Parameters: 
  pAwsAccount:
    Description: The account in which the resources will be created
    Type: AWS::SSM::Parameter::Value<String>
    Default: /standard/AWSAccount
  
  pAwsAccountLC:
    Description: The account in which the resources will be created
    Type: AWS::SSM::Parameter::Value<String>
    Default: /standard/AWSAccountLC

  pAppName:
    Description: The app cosuming these resources
    Type: String

#########################################App VPC#############################################################  
  pAppVPCCidr:
    Description: The cidr block of the vpc being created
    Type: String
  
  pAppPrivateSubnet1CIDR:
    Description: The cidr block for the first private subnet
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
     
  pAppPrivateSubnet2CIDR:
    Description: The cidr block for the second private subnet
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
    
  
  pAppPublicSubnet1CIDR:
    Description: The cidr block for the first public subnet
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
    
  
  pAppPublicSubnet2CIDR:
    Description: The cidr block for the second public subnet
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
    
  
  pAvailabilityZones:
    Description: The availability zones on which to create the resources
    Type: CommaDelimitedList
      
###################################Shared services VPC###################################################### 
  pSharedServicesAccount:
    Description: The account in which the resources will be created
    Type: AWS::SSM::Parameter::Value<String>
    Default: /standard/SharedServicesVpc

  pSharedServicesVPCCidr:
    Description: The cidr block of the shared services vpc being created
    Type: String

  pSharedServicesPrivateSubnet1CIDR:
    Description: The cidr block for the first shared services private subnet
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String

  pSharedServicesPrivateSubnet2CIDR:
    Description: The cidr block for the second private subnet
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String

  pSharedServicesPublicSubnet1CIDR:
    Description: The cidr block for the first public subnet
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String
 
  pSharedServicesPublicSubnet2CIDR:
    Description: The cidr block for the second public subnet
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    Type: String

  pSharedServicesAvailabilityZones:
    Description: The availability zones on which to create the resources
    Type: CommaDelimitedList

Resources: 
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc.html#cfn-aws-ec2-vpc-instancetenancy
 ###########################################App VPC######################################################## 
  rNestedAppVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref pAppVPCCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      # dedicated | default | host
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-vpc

  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-internetgateway.html
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc-gateway-attachment.html
  rNestedAppInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-InternetGateway
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref rNestedAppVPC
      InternetGatewayId: !Ref rNestedAppInternetGateway
    
  rNestedAppNatGateway1:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt rNestedAppElasticIP1.AllocationId
      SubnetId: !Ref rNestedAppPublicSubnet1
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ngw1
  
  rNestedAppElasticIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  
  rNestedAppNatGateway2:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt rNestedAppElasticIP2.AllocationId
      SubnetId: !Ref rNestedAppPublicSubnet2
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ngw2

  rNestedAppElasticIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet.html
  rNestedAppPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [0, !Ref pAvailabilityZones]
      CidrBlock: !Ref pAppPrivateSubnet1CIDR 
      VpcId: !Ref rNestedAppVPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-private-subnet-1

  rNestedAppPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [1, !Ref pAvailabilityZones]
      CidrBlock: !Ref pAppPrivateSubnet2CIDR
      VpcId: !Ref rNestedVPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-private-subnet-2
  
   # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route-table.html
  rNestedAppPrivateSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rNestedAppVPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-private-subnet1-rt

  rNestedAppPrivateSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rNestedAppVPC 
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-private-subnet2-rt
  
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route.html
  rNestedAppPrivetSubnet1Route:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref rNestedAppNatGateway1
      RouteTableId: !Ref rNestedAppPrivateSubnet1RouteTable

  rNestedAppPrivetSubnet2Route:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref rNestedAppNatGateway2
      RouteTableId: !Ref rNestedAppPrivateSubnet2RouteTable

  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet-route-table-assoc.html
  rNestedAppPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rNestedAppPrivateSubnet1RouteTable
      SubnetId: !Ref rNestedAppPrivateSubnet1

  rNestedAppPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rNestedAppPrivateSubnet2RouteTable
      SubnetId: !Ref rNestedAppPrivateSubnet2

  rNestedAppPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [0, !Ref pAvailabilityZones]
      CidrBlock: !Ref pAppPublicSubnet1CIDR
      VpcId: !Ref rNestedAppVPC
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-public-subnet-1

  rNestedAppPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [1, !Ref pAvailabilityZones]
      CidrBlock: !Ref pAppPublicSubnet2CIDR
      VpcId: !Ref rNestedAppVPC
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-public-subnet-2

   # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route-table.html
  rNestedAppPublicSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rNestedAppVPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-public-subnet1-rt

  rNestedAppPublicSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rNestedAppVPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-public-subnet2-rt
  
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route.html
  rNestedAppPublicSubnet1Route:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rNestedAppInternetGateway
      RouteTableId: !Ref rNestedAppPublicSubnet1RouteTable

  rNestedAppPublicSubnet2Route:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rNestedAppInternetGateway
      RouteTableId: !Ref rNestedAppPublicSubnet2RouteTable

  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet-route-table-assoc.html
  rNestedAppPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rNestedAppPublicSubnet1RouteTable
      SubnetId: !Ref rNestedAppPublicSubnet1

  rNestedAppPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rNestedAppPublicSubnet2RouteTable
      SubnetId: !Ref rNestedAppPublicSubnet2

###########################################Shared Services VPC################################################# 
  rNestedSharedServicesVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref pSharedServicesVPCCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      # dedicated | default | host
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-vpc

  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-internetgateway.html
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-vpc-gateway-attachment.html
  rNestedSharedServicesInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-InternetGateway
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref rNestedSharedServicesVPC
      InternetGatewayId: !Ref rNestedSharedServicesInternetGateway
    
  rNestedSharedServicesNatGateway1:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt rNestedSharedServicesElasticIP1.AllocationId
      SubnetId: !Ref rNestedSharedServicesPublicSubnet1
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-ngw1
  
  rNestedSharedServicesElasticIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  
  rNestedSharedServicesNatGateway2:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt rNestedSharedServicesElasticIP2.AllocationId
      SubnetId: !Ref rNestedSharedServicesPublicSubnet2
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-ngw2

  rNestedSharedServicesElasticIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet.html
  rNestedSharedServicesPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [0, !Ref pAvailabilityZones]
      CidrBlock: !Ref pSharedServicesPrivateSubnet1CIDR
      VpcId: !Ref rNestedSharedServicesVPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-private-subnet-1

  rNestedSharedServicesPrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [1, !Ref pAvailabilityZones]
      CidrBlock: !Ref pSharedServicesPrivateSubnet2CIDR
      VpcId: !Ref rNestedSharedServicesVPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-private-subnet-2
  
   # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route-table.html
  rNestedSharedServicesPrivateSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rNestedSharedServicesVPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-private-subnet1-rt

  rNestedSharedServicesPrivateSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rNestedSharedServicesVPC 
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-private-subnet2-rt
  
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route.html
  rNestedSharedServicesPrivetSubnet1Route:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref rNestedSharedServicesNatGateway1
      RouteTableId: !Ref rNestedSharedServicesPrivateSubnet1RouteTable

  rNestedSharedServicesPrivetSubnet2Route:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref rNestedSharedServicesNatGateway2
      RouteTableId: !Ref rNestedSharedServicesPrivateSubnet2RouteTable

  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet-route-table-assoc.html
  rNestedSharedServicesPrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rNestedSharedServicesPrivateSubnet1RouteTable
      SubnetId: !Ref rNestedSharedServicesPrivateSubnet1

  rNestedSharedServicesPrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rNestedSharedServicesPrivateSubnet2RouteTable
      SubnetId: !Ref rNestedSharedServicesPrivateSubnet2

  rNestedSharedServicesPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [0, !Ref pAvailabilityZones]
      CidrBlock: !Ref pSharedServicesPublicSubnet1CIDR
      VpcId: !Ref rNestedSharedServicesVPC
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-public-subnet-1

  rNestedSharedServicesPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: !Select [1, !Ref pAvailabilityZones]
      CidrBlock: !Ref pSharedServicesPublicSubnet2CIDR
      VpcId: !Ref rNestedSharedServicesVPC
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-public-subnet-2

   # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route-table.html
  rNestedSharedServicesPublicSubnet1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rNestedSharedServicesVPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-public-subnet1-rt

  rNestedSharedServicesPublicSubnet2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref rNestedSharedServicesVPC
      Tags: 
        - Key: Name 
          Value: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-public-subnet2-rt
  
  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-route.html
  rNestedSharedServicesPublicSubnet1Route:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rNestedSharedServicesInternetGateway
      RouteTableId: !Ref rNestedSharedServicesPublicSubnet1RouteTable

  rNestedSharedServicesPublicSubnet2Route:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rNestedSharedServicesInternetGateway
      RouteTableId: !Ref rNestedSharedServicesPublicSubnet2RouteTable

  # https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-ec2-subnet-route-table-assoc.html
  rNestedSharedServicesPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rNestedSharedServicesPublicSubnet1RouteTable
      SubnetId: !Ref rNestedSharedServicesPublicSubnet1

  rNestedSharedServicesPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref rNestedSharedServicesPublicSubnet2RouteTable
      SubnetId: !Ref rNestedSharedServicesPublicSubnet2
   
Outputs:
  oAppVPC:
    Description: The ID of the vpc
    Value: !Ref rNestedAppVPC
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-vpc
      
  oAppPrivateSubnet1:
    Description: The ID of the private subnet
    Value: !Ref rNestedAppPrivateSubnet1
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-private-subnet1
  
  oAppPrivateSubnet2:
    Description: The ID of the private subnet
    Value: !Ref rNestedAppPrivateSubnet2
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-private-subnet2

  oAppPublicSubnet1:
    Description: The ID of the public subnet
    Value: !Ref rNestedAppPublicSubnet1
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-public-subnet1

  oAppPublicSubnet2:
    Description: The ID of the public subnet
    Value: !Ref rNestedAppPublicSubnet2
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-public-subnet2

  oAppInternetGateway:
    Description: The ID of the internetgateway
    Value: !Ref rNestedAppInternetGateway
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-igw

  oAppNatGateway1:
    Description: The ID of the first Natgateway
    Value: !Ref rNestedAppNatGateway1
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-ngw1

  oAppNatGateway2:
    Description: The ID of the second Natgateway
    Value: !Ref rNestedAppNatGateway2
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-ngw2

  oAppPrivateSubnet1RT:
    Description: The ID of the first private subnet route table
    Value: !Ref rNestedAppPrivateSubnet1RouteTable
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-private-subnet-1-rt

  oAppPrivateSubnet2RT:
    Description: The ID of the second private subnet route table
    Value: !Ref rNestedAppPrivateSubnet2RouteTable
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-private-subnet-2-rt

  oAppPublicSubnet1RT:
    Description: The ID of the first public subnet route table
    Value: !Ref rNestedAppPublicSubnet1RouteTable
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-public-subnet-1-rt

  oAppPublicSubnet2RT:
    Description: The ID of the second public subnet route table
    Value: !Ref rNestedAppPublicSubnet2RouteTable
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-app-public-subnet-2-rt



#############################################Shared services ############################################ 
  oSharedServicesVPC:
    Description: The ID of the shared services vpc
    Value: !Ref rNestedSharedServicesVPC
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-vpc
      
  oSharedServicesPrivateSubnet1:
    Description: The ID of the shared services 1st private subnet
    Value: !Ref rNestedSharedServicesPrivateSubnet1
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-private-subnet1
  
  oSharedServicesPrivateSubnet2:
    Description: The ID of the shared services 2nd private subnet
    Value: !Ref rNestedSharedServicesPrivateSubnet2
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-private-subnet2

  oSharedServicesPublicSubnet1:
    Description: The ID of the shared services 1st public subnet 
    Value: !Ref rNestedSharedServicesPublicSubnet1
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-public-subnet1

  oSharedServicesPublicSubnet2:
    Description: The ID of the shared services 2nd public subnet
    Value: !Ref rNestedSharedServicesPublicSubnet2
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-public-subnet2

  oSharedServicesInternetGateway:
    Description: The ID of the shared services internetgateway
    Value: !Ref rNestedSharedServicesInternetGateway
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-igw

  oSharedServicesNatGateway1:
    Description: The ID of the shared services first Natgateway
    Value: !Ref rNestedSharedServicesNatGateway1
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-ngw1

  oSharedServicesNatGateway2:
    Description: The ID of the shared services second Natgateway
    Value: !Ref rNestedSharedServicesNatGateway2
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-ngw2

  oSharedservicesPrivateSubnet1RT:
    Description: The ID of the first shared services private subnet route table
    Value: !Ref rNestedSharedServicesPrivateSubnet1RouteTable
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-private-subnet-1-rt

  oSharedservicesPrivateSubnet2RT:
    Description: The ID of the second shared services private subnet route table
    Value: !Ref rNestedSharedServicesPrivateSubnet2RouteTable
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-private-subnet-2-rt

  oSharedservicesPublicSubnet1RT:
    Description: The ID of the first shared services public subnet route table
    Value: !Ref rNestedSharedServicesPublicSubnet1RouteTable
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-public-subnet-1-rt

  oSharedservicesPublicSubnet2RT:
    Description: The ID of the second shared services public subnet route table
    Value: !Ref rNestedSharedServicesPublicSubnet2RouteTable
    Export: 
      Name: !Sub ${ pAwsAccount }-${ AWS::Region}-${ pAppName }-ss-public-subnet-2-rt
